<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:id="@+id/btn_fecha_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:contentDescription="@string/calendario"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <EditText
            android:id="@+id/eFechaNew"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:autofillHints="Fechaew"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/cal"
            android:inputType="date"
            android:textColorLink="@android:color/holo_blue_light"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="48dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fecha2"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="121dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageButton
            android:id="@+id/btn_hora_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:contentDescription="@string/hora"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <EditText
            android:id="@+id/eHoraNew"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:autofillHints="HoraNew"
            android:ems="10"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:hint="@string/time"
            android:inputType="time"
            android:textColorLink="@android:color/holo_blue_light"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="48dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fecha1"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="189dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/btn_fecha"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:contentDescription="@string/calendario"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <EditText
            android:id="@+id/eFecha"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:autofillHints="Fecha"
            android:clickable="true"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/cal"
            android:inputType="date"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="48dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="121dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageButton
            android:id="@+id/btn_hora"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:contentDescription="@string/hora"
            app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

        <EditText
            android:id="@+id/eHora"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:autofillHints="Hora"
            android:clickable="false"
            android:ems="10"
            android:enabled="true"
            android:hint="@string/time"
            android:inputType="time"
            android:textColorLink="@android:color/holo_blue_light"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="58dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:onClick="Calcular"
            android:text="@string/calcular"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="97dp"
            tools:layout_editor_absoluteY="383dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="355dp"
        android:layout_height="115dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:text="@string/tiempo"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@android:color/holo_blue_light"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="413dp" />

        <TextView
            android:id="@+id/eTiempoTranscurrido"
            android:layout_width="354dp"
            android:layout_height="76dp"
            android:textColorLink="@android:color/holo_blue_light"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>